updated info paragraphs

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-md-12">
-        <h1>D3Times</h1>
+        <h1>D3 Times</h1>
       </div>
     </div>
     <div class="row">
@@ -28,17 +28,19 @@
       <div class="col-xs-12  col-md-9">
         <div class="article">
           <h2>Correlations Discovered Between Health Risks and Age, Income</h2>
-          <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
-            quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-            ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+          <p>Displayed above is an interactive scatter plot displaying the relationships between a variety of demographic variables. 
+            By clicking on the axis titles, you can switch between the displays of each data category. 
+          </p>
 
-          <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
-            quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-            ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+          <p>The dataset used to create this scatter plot consists of estimates from the 2014 US Census Bureau. Each bubble in the above plot 
+            represents a US state and are labelled with the states' abbreviations. Although there were many more categories contained within the overall 
+            dataset, this plot has been reduced to only compare age, poverty level, and median household income to the percentage of individuals in each state
+            who are obese, smokers, or have healthcare. 
+          </p>
 
-          <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
-            quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-            ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+          <p>Since this data set is quite old, it would be interesting if, in future projects, a comparison was made between this dataset and a more recent one. One 
+            can expect quite a bit of change to have happened in the past seven year, so observing the directions of these trends could be insightful.  
+          </p>
         </div>
       </div>
     </div>
